second level api spec change with cherry picks
